2003-01-04  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/tcpip.sgml: Use new entity name for tcpip manpages.

2002-10-06  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/multi_lo_select.c: Need the io_fileio.h header file
	* tests/tcp_echo.c: (max): definition clashes with the one in
	the header file lib/libkern/libkern.h

2002-08-16  Gary Thomas  <gthomas@ecoscentric.com> (on behalf of)
2002-08-16  Louis Hamilton <hamilton@redhat.com>	

	* src/ipv6_routing_thread.c: General improvements (from Red Hat)
	for better compliance.

2002-08-14  Jonathan Larmour  <jifl@ecoscentric.com>

	* src/getserv.c: Include errno.h as errno is used.

2002-08-07  Gary Thomas  <gary@chez-thomas.org>

	* src/tftp_server.c: 
	* src/tftp_client.c: 
	* include/arpa/tftp.h: Make block numbers unsigned to handle files
	larger than 16MB.

2002-07-26  Gary Thomas  <gary@chez-thomas.org>
2002-07-26  Ken Cox <jkc@redhat.com>

	* src/dhcp_prot.c: The IPv6 link local address would not be 
	recognized if configured to use dhcp.  When dhcp reconfigures 
	the interface after obtaining it's info, it needs to delete 
	the IPv6 link local address (as well as the IPv4) address before 
	reconfiguring.

2002-07-10  Gary Thomas  <gary@chez-thomas.org>

	* src/inet_addr.c: 
	* src/getproto.c: 
	* src/dhcp_prot.c: 
	* src/bootp_support.c: Pedantic - make sure "errno" is defined.

2002-07-04  Jonathan Larmour  <jlarmour@redhat.com>

	* src/dhcp_prot.c (_dhcp_copy): Remove. Unnecessary as we can never
	receive a packet longer than sizeof(struct bootp)
	(do_dhcp): Also set giaddr to 0 before sends.
	Verify length of received packets, especially to check for truncation.

2002-06-20  Gary Thomas  <gary@chez-thomas.org>

	* src/inet_ntop.c: Fix build error when used with newer compilers.

2002-06-05  Gary Thomas  <gary@chez-thomas.org>

	* src/dhcp_prot.c (_dhcp_copy): New function used to better handle
	replies that can be variable length.

2002-05-30  Gary Thomas  <gthomas@redhat.com>
